Finished game fits into one presentation slide

--- a/reveal.js-2.5.0/index.html
+++ b/reveal.js-2.5.0/index.html
@@ -66,6 +66,7 @@
 
 				<section>
 					<h2>Let's make a (small) game!</h2>
+					<h4>Based on: pygame/examples/chimp.py</h4>
 				</section>
 
 				<section>
@@ -74,6 +75,7 @@
 import pygame, sys, os
 from pygame.locals import *
 
+# initialize pygame
 pygame.init()
 						</code></pre>
 					</section>
@@ -82,11 +84,68 @@ pygame.init()
 import pygame, sys, os
 from pygame.locals import *
 
+# initialize pygame
 pygame.init()
 
+# create a window
 screen = pygame.display.set_mode((450, 450))
 						</code></pre>
 					</section>
+					<section data-transition="none">
+						<pre><code data-trim contenteditable>
+import pygame, sys, os
+from pygame.locals import *
+
+# initialize pygame
+pygame.init()
+
+# create a window
+screen = pygame.display.set_mode((450, 450))
+
+# create an (infinite) game loop
+while 1:
+  pass
+						</code></pre>
+					</section>
+					<section data-transition="none" data-top="-500px">
+						<pre><code data-trim contenteditable>
+import pygame, random
+from pygame.locals import *
+
+class Kitten(pygame.sprite.Sprite):
+  def __init__(self):
+    pygame.sprite.Sprite.__init__(self) #call Sprite intializer
+    self.image = pygame.image.load('150.jpg')
+    self.rect = self.image.get_rect()
+    self.rect.center = (250, 250)
+
+  def run_away_from(self, position):
+    if self.rect.collidepoint(position):
+      self.rect.move_ip(random.uniform(-25, 25), random.uniform(-25, 25))
+
+pygame.init()
+screen = pygame.display.set_mode((500, 500))
+background = pygame.Surface(screen.get_size())
+background.fill((250, 250, 250))
+
+clock = pygame.time.Clock()
+kitten = Kitten()
+allsprites = pygame.sprite.RenderPlain((kitten))
+
+while 1:
+  #Handle Input Events
+  for event in pygame.event.get():
+    if event.type == MOUSEMOTION:
+      kitten.run_away_from(event.dict['pos'])
+
+  screen.blit(background, (0, 0))
+  allsprites.draw(screen) 
+  pygame.display.flip() 
+						</code></pre>
+					</section>
+				</section>
+				<section>
+					<h1>More info at: http://pygame.org/</h1>
 				</section>
 
 				<!-- Example of nested vertical slides -->
